config.json: updated url in logo

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -62,7 +62,7 @@
                 }
             },
             "type": "ImageBlock",
-            "url": "/images/logo.svg"
+            "url": "/images/29691430-black-emblem-of-frendly-retro-robot-with-gears.webp"
         }
     },
     "footer": {
