config.json: updated url in logo

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -62,7 +62,7 @@
                 }
             },
             "type": "ImageBlock",
-            "url": "/images/WEBSITE.PNG"
+            "url": "/images/smarter.svg"
         }
     },
     "footer": {
