config.json: updated label in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -27,7 +27,7 @@
             },
             {
                 "type": "Link",
-                "label": "Blog",
+                "label": "RISK",
                 "altText": "Blog",
                 "url": "/blog"
             }
