--- a/content/data/config.json
+++ b/content/data/config.json
@@ -26,7 +26,7 @@
                 "altText": ""
             },
             {
-                "label": "fINANCE",
+                "label": "FINANCE",
                 "altText": "",
                 "url": "/",
                 "showIcon": false,
