--- a/content/data/config.json
+++ b/content/data/config.json
@@ -36,6 +36,16 @@
                 "type": "Link"
             },
             {
+                "label": "Learn more",
+                "altText": "",
+                "url": "/",
+                "showIcon": false,
+                "icon": "arrowRight",
+                "iconPosition": "right",
+                "elementId": "",
+                "type": "Link"
+            },
+            {
                 "label": "FINANCE",
                 "altText": "",
                 "url": "/",
