--- a/content/data/config.json
+++ b/content/data/config.json
@@ -36,7 +36,7 @@
                 "type": "Link"
             },
             {
-                "label": "Learn more",
+                "label": "GitHub",
                 "altText": "",
                 "url": "/",
                 "showIcon": false,
