config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -16,7 +16,7 @@
             {
                 "type": "Link",
                 "label": "VISION",
-                "url": "/careers",
+                "url": "/vision",
                 "altText": ""
             },
             {
