--- a/content/data/config.json
+++ b/content/data/config.json
@@ -22,7 +22,7 @@
             {
                 "type": "Link",
                 "label": "STRATEGIES",
-                "url": "/faq",
+                "url": "/strategies",
                 "altText": ""
             },
             {
