config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,7 +28,7 @@
             {
                 "label": "MARKETING",
                 "altText": "",
-                "url": "/",
+                "url": "/marketing",
                 "showIcon": false,
                 "icon": "arrowRight",
                 "iconPosition": "right",
