--- a/content/data/config.json
+++ b/content/data/config.json
@@ -38,7 +38,7 @@
             {
                 "label": "FINANCE",
                 "altText": "",
-                "url": "/",
+                "url": "/finance",
                 "showIcon": false,
                 "icon": "arrowRight",
                 "iconPosition": "right",
