--- a/content/data/config.json
+++ b/content/data/config.json
@@ -49,7 +49,7 @@
                 "type": "Link",
                 "label": "RISK",
                 "altText": "Blog",
-                "url": "/blog"
+                "url": "/risk"
             },
             {
                 "label": "GitHub",
