config.json: updated url in primaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -54,7 +54,7 @@
             {
                 "label": "GitHub",
                 "altText": "",
-                "url": "/",
+                "url": "https://github.com/ParaleRanjith/budget-robo-78567.git",
                 "showIcon": false,
                 "icon": "arrowRight",
                 "iconPosition": "right",
