config.json: updated title in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -109,7 +109,7 @@
             "type": "ImageBlock",
             "url": "/images/logo.svg"
         },
-        "title": "Starter",
+        "title": "BUDGET-ROBO",
         "contacts": {
             "phoneNumber": "850-123-5021",
             "phoneAltText": "Our phone",
